update to index2

--- a/index2.html
+++ b/index2.html
@@ -20,10 +20,10 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div id="divLine"></div>
+		<div id="divLines"></div>
 		<div id="divAbout">
 			<div id="divContent"><img src="http://sr.photos3.fotosearch.com/bthumb/CSP/CSP748/k7487017.jpg" width="90" height="123"/>
-			<h5>Agata starts an adventure with coding </h5>
+			<h5>Agata has just started an adventure with coding </h5>
 			<p>Hi!I am an open-minded person with high motivation to learn programming. My goal is to create well-designed responsive websites and to be a really good web developer.
 			For almost a year I have been working as an HR Specialist. 
 			Soon you will see more projects on this website. </p></div>
