--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 			For almost a year I have been working as an HR Specialist. 
 			Soon you will see more projects on this website. </p></div>
 		</div>
+		<div id="divResume">
+			<h5>Experience and education</h5>
+			<p>I have graduated in teaching German and English. I have also a Bachelor of Engineering degree in Environmental Protection and Management and a Master of Arts degree in Management. For many years I have been teaching children and adults. Currently I am teaching at the weekends only as I work also as a HR Executive in one of the multinational companies.</p>
+		</div>
 		<div id="divFooter"></div>
 	</div>
 </div>
