--- a/index.html
+++ b/index.html
@@ -23,16 +23,27 @@
 		<div id="divLines"></div>
 		<div id="divAbout">
 			<div id="divContent"><img src="http://sr.photos3.fotosearch.com/bthumb/CSP/CSP748/k7487017.jpg" width="90" height="123"/>
-			<h5>Agata has just started an adventure with coding </h5>
-			<p>Hi!I am an open-minded person with high motivation to learn programming. My goal is to create well-designed responsive websites and to be a really good web developer.
-			For almost a year I have been working as an HR Specialist. 
-			Soon you will see more projects on this website. </p></div>
+			<h5>A new language school to be opened </h5>
+			<p>Hi!I am Agata. I am an open-minded person with high motivation and enthusiasm to teach students from all over the world. I speak German and English. In the nearest future I would like to start studying Swedish. If you are looking for a well-educated, experienced teacher, do not hesistate and get in contact with me by sending an e-mail.</p></div>
 		</div>
 		<div id="divResume">
 			<h5>Experience and education</h5>
-			<p>I have graduated in teaching German and English. I have also a Bachelor of Engineering degree in Environmental Protection and Management and a Master of Arts degree in Management. For many years I have been teaching children and adults. Currently I am teaching at the weekends only as I work also as a HR Executive in one of the multinational companies.</p>
+			<p>I have graduated in teaching German and English. I have also a Bachelor of Engineering degree in Environmental Protection and Management and a Master of Arts degree in Management. For many years I have been teaching children and adults. Currently I am teaching at the weekends only as I work also as a HR Executive in one of the multinational companies.
+			I can prepare you for exams, work abroad or simply be a partner in business negotiations. During my classes you will improve your speaking, listening, reading and writing skills.</p>
 		</div>
-		<div id="divFooter"></div>
+		<div id="divPortfolio">
+			<h5> Below there are some examples of books I have been using during my classes </h5>
+			<p>
+				<ul><li><a href="http://www.empik.com/english-for-logistics-cd-marion-grussendorf,p1101409930,ksiazka-p"> English for Logistics </a></li>
+				    <li><a href="https://merlin.pl/english-for-business-studies-students-book-mackenzie-ian/6777319/?utm_source=ceneo&utm_medium=price&utm_campaign=ceneo_bid"> English for Business </a></li>
+				    <li><a href="https://www.pearsonelt.com/catalogue/business-english/english-for-tourism.html"> English for Tourism </a></li></ul>
+			</p>
+		</div>
+		<div id="divContact">
+			<p> Please click on the link provided and send me an e-mail. I will reply to your message as soon as I can!
+				<a href="mailto:email@gmail.com? subject=English courses">Send me an email!</a></p>
+		</div>
+		<div id="divFooter"><h5>2017 Agata Zyntek </h5></div>
 	</div>
 </div>
 </body>
