--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div id="divWrapper">
-	<div id="divHeader"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250px" width="200px"/></div>
+	<div id="divHeader"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250" width="200"/></div>
 	<div id="divLine"></div>
 	<div id="divLinks">
 		<div id="divNav">
@@ -33,15 +33,13 @@
 		</div>
 		<div id="divPortfolio">
 			<h5> Below there are some examples of books I have been using during my classes </h5>
-			<p>
-				<ul><li><a href="http://www.empik.com/english-for-logistics-cd-marion-grussendorf,p1101409930,ksiazka-p"> English for Logistics </a></li>
+			<p><ul><li><a href="http://www.empik.com/english-for-logistics-cd-marion-grussendorf,p1101409930,ksiazka-p"> English for Logistics </a></li>
 				    <li><a href="https://merlin.pl/english-for-business-studies-students-book-mackenzie-ian/6777319/?utm_source=ceneo&utm_medium=price&utm_campaign=ceneo_bid"> English for Business </a></li>
-				    <li><a href="https://www.pearsonelt.com/catalogue/business-english/english-for-tourism.html"> English for Tourism </a></li></ul>
-			</p>
+				    <li><a href="https://www.pearsonelt.com/catalogue/business-english/english-for-tourism.html"> English for Tourism </a></li></ul></p>
 		</div>
 		<div id="divContact">
 			<p> Please click on the link provided and send me an e-mail. I will reply to your message as soon as I can!
-				<a href="mailto:email@gmail.com? subject=English courses">Send me an email!</a></p>
+				<a href="mailto:email@gmail.com?subject=English">Send me an email!</a></p>
 		</div>
 		<div id="divFooter"><h5>2017 Agata Zyntek </h5></div>
 	</div>
