--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 		</div>
 		<div id="divPortfolio">
 			<h5> Below there are some examples of books I have been using during my classes </h5>
-			<p><ul><li><a href="http://www.empik.com/english-for-logistics-cd-marion-grussendorf,p1101409930,ksiazka-p"> English for Logistics </a></li>
+			<ul><li><a href="http://www.empik.com/english-for-logistics-cd-marion-grussendorf,p1101409930,ksiazka-p"> English for Logistics </a></li>
 				    <li><a href="https://merlin.pl/english-for-business-studies-students-book-mackenzie-ian/6777319/?utm_source=ceneo&utm_medium=price&utm_campaign=ceneo_bid"> English for Business </a></li>
-				    <li><a href="https://www.pearsonelt.com/catalogue/business-english/english-for-tourism.html"> English for Tourism </a></li></ul></p>
+				    <li><a href="https://www.pearsonelt.com/catalogue/business-english/english-for-tourism.html"> English for Tourism </a></li></ul>
+		
 		</div>
 		<div id="divContact">
 			<p> Please click on the link provided and send me an e-mail. I will reply to your message as soon as I can!
