--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</div>
 		<div id="divContact">
 			<p> Please click on the link provided and send me an e-mail. I will reply to your message as soon as I can!
-				<a href="mailto:email@gmail.com?subject=English">Send me an email!</a></p>
+				<a href="mailto:xyzmail@gmail.com?subject=English">Send me an email!</a></p>
 		</div>
 		<div id="divFooter"><h5>2017 Agata Zyntek </h5></div>
 	</div>
