--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {
 	background:#C338AC;
 	background:-moz-linear-gradient(top, #EA80FC, #EAADEA);
 	background:-webkit-gradient(linear, left top, left bottom, from(#EA80FC), to(#EAADEA));
-	color:beige;
+	color:#6A1B9A;
 	cursor:default;
 }
 #divLines {
