--- a/index.html
+++ b/index.html
@@ -66,18 +66,18 @@ body {
 	border:1px solid #C338AC;
 	
 	/*Gradients*/
-	background:-moz-linear-gradient(top, #EA80FC, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#EA80FC), to(#EAADEA));	
+	background:-moz-linear-gradient(top, #FCE4EC, #EAADEA);
+	background:-webkit-gradient(linear, left top, left bottom, from(#FCE4EC), to(#EAADEA));	
 }
 #divNav ul li a:hover {
 	background:#C338AC;
-	background:-moz-linear-gradient(top, #EA80FC, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#EA80FC), to(#EAADEA));
+	background:-moz-linear-gradient(top, #FCE4EC, #EAADEA);
+	background:-webkit-gradient(linear, left top, left bottom, from(#FCE4EC), to(#EAADEA));
 }
 #divNav ul li a.current, #divNav ul li a.current:hover {
 	background:#C338AC;
-	background:-moz-linear-gradient(top, #EA80FC, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#EA80FC), to(#EAADEA));
+	background:-moz-linear-gradient(top,#FCE4EC, #EAADEA);
+	background:-webkit-gradient(linear, left top, left bottom, from(#FCE4EC), to(#EAADEA));
 	color:#6A1B9A;
 	cursor:default;
 }
