--- a/index.html
+++ b/index.html
@@ -81,11 +81,6 @@ body {
 	color:#6A1B9A;
 	cursor:default;
 }
-#divLines {
-	width:700px;
-	background:#DB7093;
-	height: 1px;
-}
 #divAbout {
 	width:700px;
 	background:#CC3366;
@@ -183,7 +178,7 @@ body {
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div id="divLines"></div>
+		<div id="divLine"></div>
 		<div id="divAbout">
 			<div id="divContent"><img src="http://sr.photos3.fotosearch.com/bthumb/CSP/CSP748/k7487017.jpg" width="90" height="123"/>
 			<h5>A new language school to be opened </h5>
