--- a/resume.html
+++ b/resume.html
@@ -81,11 +81,6 @@ body {
 	color:#6A1B9A;
 	cursor:default;
 }
-#divLines {
-	width:700px;
-	background:#DB7093;
-	height: 1px;
-}
 #divAbout {
 	width:700px;
 	background:#CC3366;
@@ -181,7 +176,7 @@ body {
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div id="divLines"></div>
+		<div id="divLine"></div>
 		<div id="divResume">
 			<h5>Experience and education</h5>
 			<p>I have graduated in teaching German and English. I have also a Bachelor of Engineering degree in Environmental Protection and Management and a Master of Arts degree in Management. For many years I have been teaching children and adults. Currently I am teaching at the weekends only as I work also as a HR Executive in one of the multinational companies.
