--- a/portfolio.html
+++ b/portfolio.html
@@ -99,6 +99,21 @@ body {
 	padding-top:60px;
 	padding-bottom:60px;
 }
+#divPortfolio ul li {
+	display:block;
+	height:10px;
+	line-height:10px;
+	background:#E59FE3;
+	width:80px;
+	font-size:0.5em;
+	font-weight:bold;
+	color:black;
+	text-align:center;
+	text-decoration:none;
+	margin:7px;
+	border-radius:5px;
+	border:1px solid #C338AC;
+}
 #divContact {
 	width:700px;
 	background:#CC3366;
