--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
 	padding-top:20px;
 	padding-bottom:20px;
 }
-#Line {
+.Line {
 	background:#DB7093;
 	height: 1px;
 }
@@ -164,7 +164,7 @@ body {
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div id="Line"></div>
+		<div class="Line"></div>
 		<div id="About">
 			<div id="Content"><img src="http://sr.photos3.fotosearch.com/bthumb/CSP/CSP748/k7487017.jpg" width="90" height="123"/>
 			<h1>A new language school to be opened </h1>
