--- a/resume.html
+++ b/resume.html
@@ -25,13 +25,11 @@ body {
 	padding-top:20px;
 	padding-bottom:20px;
 }
-#Line {
-	width:700px;
+.Line {
 	background:#DB7093;
 	height: 1px;
 }
 #Links {
-	width:700px;
 	background:#DB7093;	
 }
 #Nav {
@@ -163,7 +161,7 @@ body {
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div id="Line"></div>
+		<div class="Line"></div>
 		<div id="Resume">
 			<h2>Experience and education</h2>
 			<p>I have graduated in teaching German and English. I have also a Bachelor of Engineering degree in Environmental Protection and Management and a Master of Arts degree in Management. For many years I have been teaching children and adults. Currently I am teaching at the weekends only as I work also as a HR Executive in one of the multinational companies.
