--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@ body {
 	padding-top:20px;
 	padding-bottom:20px;
 }
-#Line {
+.Line {
 	background:#DB7093;
 	height: 1px;
 }
@@ -179,7 +179,7 @@ body {
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div id="Line"></div>
+		<div class="Line"></div>
 		<div id="Portfolio">
 			<h2> Educational materials </h2>
 			<ul><li><a href="http://www.empik.com/english-for-logistics-cd-marion-grussendorf,p1101409930,ksiazka-p"> English for Logistics </a></li>
