--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@ body {
 	padding-top:20px;
 	padding-bottom:20px;
 }
-#Line {
+.Line {
 	background:#DB7093;
 	height: 1px;
 }
@@ -163,7 +163,7 @@ body {
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div id="Line"></div>
+		<div class="Line"></div>
 		<div id="Contact">
 			<p> Please click on the link provided and send me an e-mail. I will reply to your message as soon as I can!
 				<a href="mailto:xyzmail@gmail.com?subject=English">Send me an email!</a></p>
