--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@ body {
 }
 #Portfolio ul li {
 	display:inline-block;
-	height:20px;
+	height:auto;
 	line-height:20px;
 	background:#E59FE3;
 	width:80px;
