--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@ body {
 	padding-top:20px;
 	padding-bottom:20px;
 }
-.Line {
+#Line {
 	background:#DB7093;
 	height: 1px;
 }
@@ -161,11 +161,12 @@ body {
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div class="Line"></div>
+		<div id="Line"></div>
 		<div id="Resume">
+			<div id="Content">
 			<h2>Experience and education</h2>
 			<p>I have graduated in teaching German and English. I have also a Bachelor of Engineering degree in Environmental Protection and Management and a Master of Arts degree in Management. For many years I have been teaching children and adults. Currently I am teaching at the weekends only as I work also as a HR Executive in one of the multinational companies.
-			I can prepare you for exams, work abroad or simply be a partner in business negotiations. During my classes you will improve your speaking, listening, reading and writing skills.</p>
+			I can prepare you for exams, work abroad or simply be a partner in business negotiations. During my classes you will improve your speaking, listening, reading and writing skills.</p></div>
 		</div>
 		<div id="Footer"><h5>2017 Agata Zyntek </h5></div>
 	</div>
