--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>index</title>
+<title>portfolio</title>
 <style>
 @charset "utf-8";
 body, h1, h2, h3, h4, h5, h6, p, div, ul, li {
@@ -25,7 +25,7 @@ body {
 	padding-top:20px;
 	padding-bottom:20px;
 }
-.Line {
+#Line {
 	background:#DB7093;
 	height: 1px;
 }
@@ -179,12 +179,13 @@ body {
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div class="Line"></div>
+		<div id="Line"></div>
 		<div id="Portfolio">
+			<div id="Content">
 			<h2> Educational materials </h2>
 			<ul><li><a href="http://www.empik.com/english-for-logistics-cd-marion-grussendorf,p1101409930,ksiazka-p"> English for Logistics </a></li>
 				    <li><a href="https://merlin.pl/english-for-business-studies-students-book-mackenzie-ian/6777319/?utm_source=ceneo&utm_medium=price&utm_campaign=ceneo_bid"> English for Business </a></li>
-				    <li><a href="https://www.pearsonelt.com/catalogue/business-english/english-for-tourism.html"> English for Tourism </a></li></ul>
+				    <li><a href="https://www.pearsonelt.com/catalogue/business-english/english-for-tourism.html"> English for Tourism </a></li></ul></div>
 		</div>
 		<div id="Footer"><h5>2017 Agata Zyntek </h5></div>
 	</div>
