--- a/resume.html
+++ b/resume.html
@@ -128,7 +128,7 @@ body {
 	color:#FFF;
 	padding-top:0.8em;
 	padding-bottom:0;
-	padding-left:0;
+	padding-left:0.3em;
 	padding-right:0;
 }
 #Content p {
