--- a/portfolio.html
+++ b/portfolio.html
@@ -105,6 +105,7 @@ body {
 	margin:7px;
 	border-radius:5px;
 	border:1px solid #C338AC;
+						
 }
 #Contact {
 	width:700px;
@@ -146,7 +147,7 @@ body {
 	color:#FFF;
 	padding-top:0.8em;
 	padding-bottom:0;
-	padding-left:0;
+	padding-left:0.3em;
 	padding-right:0;
 }
 #Content p {
