--- a/portfolio.html
+++ b/portfolio.html
@@ -104,8 +104,8 @@ body {
 	text-decoration:none;
 	margin:7px;
 	border-radius:5px;
-	border:1px solid #C338AC;
-						
+	border:1px solid #C338AC;	
+	padding-left:20px;
 }
 #Contact {
 	width:700px;
