--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ body {
 <body>
 
 <div id="Wrapper">
-	<div id="Header"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250" width="200"/></div>
+	<div id="Header"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250" width="200" alt="flower"/></div>
 	<div id="Line"></div>
 	<div id="Links">
 		<div id="Nav">
@@ -166,7 +166,7 @@ body {
 		</div>
 		<div id="Line"></div>
 		<div id="About">
-			<div id="Content"><img src="http://sr.photos3.fotosearch.com/bthumb/CSP/CSP748/k7487017.jpg" width="90" height="123"/>
+			<div id="Content"><img src="http://sr.photos3.fotosearch.com/bthumb/CSP/CSP748/k7487017.jpg" width="90" height="123" alt="Lady"/>
 			<h1>A new language school to be opened </h1>
 			<p>Hi!I am Agata. I am an open-minded person with high motivation and enthusiasm to teach students from all over the world. I speak German and English. In the nearest future I would like to start studying Swedish. If you are looking for a well-educated, experienced teacher, do not hesistate and get in contact with me by sending an e-mail.</p></div>
 		</div>
