--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@ body {
 <body>
 
 <div id="Wrapper">
-	<div id="Header"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250" width="200"/></div>
+	<div id="Header"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250" width="200" alt="flower"/></div>
 	<div id="Line"></div>
 	<div id="Links">
 		<div id="Nav">
