--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body, h1, h2, h3, h4, h5, h6, p, div, ul, li {
 }
 body {
 	font-family:"Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
-	background-color: lavenderblush;
+	background-color:#ffffff;
 }
 #Wrapper {
 	width:700px;
@@ -26,15 +26,15 @@ body {
 	padding-bottom:20px;
 }
 #Line {
-	background:#DB7093;
+	background:#8e2347;
 	height: 1px;
 }
 #Links {
-	background:#DB7093;	
+	background:#ffffff;	
 }
 #Nav {
 	width:390px;
-	background:#DB7093;
+	background:#ffffff;
 	height:36px;
 	margin: 0 auto;
 }
@@ -48,7 +48,7 @@ body {
 	display:block;
 	height:20px;
 	line-height:20px;
-	background:#E59FE3;
+	background:#feedff;
 	width:80px;
 	font-size:0.7em;
 	font-weight:bold;
@@ -59,15 +59,9 @@ body {
 	/*Border Radius*/
 	border-radius:5px;
 	border:1px solid #C338AC;
-	
-	/*Gradients*/
-	background:-moz-linear-gradient(top, #FCE4EC, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FCE4EC), to(#EAADEA));	
 }
 #Nav ul li a:hover {
-	background:#C338AC;
-	background:-moz-linear-gradient(top, #FCE4EC, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FCE4EC), to(#EAADEA));
+	background:#590a32;
 }
 #Nav ul li a.current, #divNav ul li a.current:hover {
 	background:#C338AC;
