--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
 	height: 1px;
 }
 #Links {
-	background:#ffffff;	
+	background:#F48FB1;	
 }
 #Nav {
 	width:390px;
@@ -48,7 +48,7 @@ body {
 	display:block;
 	height:20px;
 	line-height:20px;
-	background:#feedff;
+	background:#EC407A;
 	width:80px;
 	font-size:0.7em;
 	font-weight:bold;
