--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
 	height: 1px;
 }
 #Links {
-	background:#F48FB1;	
+	background:#8e2347;	
 }
 #Nav {
 	width:390px;
@@ -48,7 +48,7 @@ body {
 	display:block;
 	height:20px;
 	line-height:20px;
-	background:#EC407A;
+	background:#f7cadf;
 	width:80px;
 	font-size:0.7em;
 	font-weight:bold;
@@ -61,7 +61,7 @@ body {
 	border:1px solid #C338AC;
 }
 #Nav ul li a:hover {
-	background:#590a32;
+	background:#eab6cc;
 }
 #Nav ul li a.current, #divNav ul li a.current:hover {
 	background:#C338AC;
