--- a/index.html
+++ b/index.html
@@ -64,32 +64,26 @@ body {
 	background:#eab6cc;
 }
 #Nav ul li a.current, #divNav ul li a.current:hover {
-	background:#C338AC;
-	background:-moz-linear-gradient(top,#FCE4EC, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FCE4EC), to(#EAADEA));
-	color:#6A1B9A;
+	background:#eab6cc;
+	color:#000;
 	cursor:default;
 }
 #About {
-	width:700px;
 	background:#CC3366;
 	padding-top:60px;
 	padding-bottom:60px;
 }
 #Resume {
-	width:700px;
 	background:#CC3366;
 	padding-top:60px;
 	padding-bottom:60px;
 }
 #Portfolio {
-	width:700px;
 	background:#CC3366;
 	padding-top:60px;
 	padding-bottom:60px;
 }
 #Contact {
-	width:700px;
 	background:#CC3366;
 	padding-top:60px;
 	padding-bottom:60px;
@@ -97,12 +91,8 @@ body {
 #Content {
 	width:430px;
 	margin:0 auto;
-	background:#D87AAF;
+	background:#ffffff;
 	border: 1px solid #000;
-	
-	/*Gradients*/
-	background:-moz-linear-gradient(top, #FFFFFF, #EAADEA, #FF6EC7);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#FF6EC7)), color-stop(0.5, #EAADEA);
 	border-radius:15px;
 	
 	/*Shadows*/
@@ -111,7 +101,7 @@ body {
 #Content img {
 	float:left;
 	border:1px solid #000;
-	background:#EF99F1;
+	background:#ffffff;
 	padding:16px;
 	margin:0.7em;
 	/*Gradients*/
@@ -121,7 +111,7 @@ body {
 	border-radius:15px;	
 }
 #Content h1 {
-	color:#FCE4EC;
+	color:#490088;
 	padding-top:0.8em;
 	padding-bottom:0;
 	padding-left:0;
@@ -129,16 +119,17 @@ body {
 }
 #Content p {
 	font-size:0.9em;
-	color:#FFF;
+	color:#490088;
 	padding:0.7em;
 	line-height:1.4em;
 }
 #Footer {
-	background:#DB7093;
+	background:#8e2347;
 	height:20px;
 	width:700px;
 	border-bottom:1px solid #C729D7;
 	text-align: center;
+	font-size: 18px;
 }
 
 </style>
@@ -164,7 +155,7 @@ body {
 			<h1>A new language school to be opened </h1>
 			<p>Hi!I am Agata. I am an open-minded person with high motivation and enthusiasm to teach students from all over the world. I speak German and English. In the nearest future I would like to start studying Swedish. If you are looking for a well-educated, experienced teacher, do not hesistate and get in contact with me by sending an e-mail.</p></div>
 		</div>
-		<div id="Footer"><h5>2017 Agata Zyntek </h5></div>
+		<div id="Footer"><strong>2017 Agata Zyntek </strong></div>
 	</div>
 </div>
 </body>
