--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@ body, h1, h2, h3, h4, h5, h6, p, div, ul, li {
 }
 body {
 	font-family:"Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
-	background-color: lavenderblush;
+	background-color: #ffffff;
 }
 #Wrapper {
 	width:700px;
@@ -26,15 +26,15 @@ body {
 	padding-bottom:20px;
 }
 #Line {
-	background:#DB7093;
+	background:#8e2347;
 	height: 1px;
 }
 #Links {
-	background:#DB7093;	
+	background:#8e2347;	
 }
 #Nav {
 	width:390px;
-	background:#DB7093;
+	background:#ffffff;
 	height:36px;
 	margin: 0 auto;
 }
@@ -48,7 +48,7 @@ body {
 	display:block;
 	height:20px;
 	line-height:20px;
-	background:#E59FE3;
+	background:#f7cadf;
 	width:80px;
 	font-size:0.7em;
 	font-weight:bold;
@@ -59,21 +59,13 @@ body {
 	/*Border Radius*/
 	border-radius:5px;
 	border:1px solid #C338AC;
-	
-	/*Gradients*/
-	background:-moz-linear-gradient(top, #FCE4EC, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FCE4EC), to(#EAADEA));	
 }
 #Nav ul li a:hover {
-	background:#C338AC;
-	background:-moz-linear-gradient(top, #FCE4EC, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FCE4EC), to(#EAADEA));
+	background:#eab6cc;
 }
 #Nav ul li a.current, #divNav ul li a.current:hover {
-	background:#C338AC;
-	background:-moz-linear-gradient(top,#FCE4EC, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FCE4EC), to(#EAADEA));
-	color:#6A1B9A;
+	background:#eab6cc;
+	color:#000;
 	cursor:default;
 }
 #About {
@@ -99,12 +91,8 @@ body {
 #Content {
 	width:430px;
 	margin:0 auto;
-	background:#D87AAF;
+	background:#ffffff;
 	border: 1px solid #000;
-	
-	/*Gradients*/
-	background:-moz-linear-gradient(top, #FFFFFF, #EAADEA, #FF6EC7);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#FF6EC7)), color-stop(0.5, #EAADEA);
 	border-radius:15px;
 	
 	/*Shadows*/
@@ -113,19 +101,15 @@ body {
 #Content img {
 	float:left;
 	border:1px solid #000;
-	background:#EF99F1;
+	background:#ffffff;
 	padding:16px;
 	margin:0.7em;
-	/*Gradients*/
-	
-	background:-moz-linear-gradient(top, #FFFFFF, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#EAADEA));
 	
 	/*Border Radius*/
 	border-radius:15px;	
 }
 #Content h2 {
-	color:#FFF;
+	color:#490088;
 	padding-top:0.8em;
 	padding-bottom:0;
 	padding-left:0.3em;
@@ -133,16 +117,17 @@ body {
 }
 #Content p {
 	font-size:0.9em;
-	color:#FFF;
+	color:#490088;
 	padding:0.7em;
 	line-height:1.4em;
 }
 #Footer {
-	background:#DB7093;
+	background:#8e2347;
 	height:20px;
 	width:700px;
 	border-bottom:1px solid #C729D7;
 	text-align: center;
+	font-size: 18px
 }
 </style>
 </head>
@@ -168,7 +153,7 @@ body {
 			<p>I have graduated in teaching German and English. I have also a Bachelor of Engineering degree in Environmental Protection and Management and a Master of Arts degree in Management. For many years I have been teaching children and adults. Currently I am teaching at the weekends only as I work also as a HR Executive in one of the multinational companies.
 			I can prepare you for exams, work abroad or simply be a partner in business negotiations. During my classes you will improve your speaking, listening, reading and writing skills.</p></div>
 		</div>
-		<div id="Footer"><h5>2017 Agata Zyntek </h5></div>
+		<div id="Footer"><strong>2017 Agata Zyntek </strong></div>
 	</div>
 </div>
 </body>
