--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@ body, h1, h2, h3, h4, h5, h6, p, div, ul, li {
 }
 body {
 	font-family:"Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
-	background-color: lavenderblush;
+	background-color: #ffffff;
 }
 #Wrapper {
 	width:700px;
@@ -26,15 +26,15 @@ body {
 	padding-bottom:20px;
 }
 #Line {
-	background:#DB7093;
+	background:#8e2347;
 	height: 1px;
 }
 #Links {
-	background:#DB7093;	
+	background:#8e2347;	
 }
 #Nav {
 	width:390px;
-	background:#DB7093;
+	background:#ffffff;
 	height:36px;
 	margin: 0 auto;
 }
@@ -48,7 +48,7 @@ body {
 	display:block;
 	height:20px;
 	line-height:20px;
-	background:#E59FE3;
+	background:#f7cadf;
 	width:80px;
 	font-size:0.7em;
 	font-weight:bold;
@@ -58,22 +58,14 @@ body {
 	margin:7px;
 	/*Border Radius*/
 	border-radius:5px;
-	border:1px solid #C338AC;
-	
-	/*Gradients*/
-	background:-moz-linear-gradient(top, #FCE4EC, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FCE4EC), to(#EAADEA));	
+	border:1px solid #C338AC;	
 }
 #Nav ul li a:hover {
-	background:#C338AC;
-	background:-moz-linear-gradient(top, #FCE4EC, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FCE4EC), to(#EAADEA));
+	background:#eab6cc;
 }
 #Nav ul li a.current, #Nav ul li a.current:hover {
-	background:#C338AC;
-	background:-moz-linear-gradient(top,#FCE4EC, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FCE4EC), to(#EAADEA));
-	color:#6A1B9A;
+	background:#eab6cc;
+	color:#000;
 	cursor:default;
 }
 #About {
@@ -95,7 +87,7 @@ body {
 	display:inline-block;
 	height:auto;
 	line-height:20px;
-	background:#E59FE3;
+	background:#ffffff;
 	width:70px;
 	font-size:0.8em;
 	font-weight:bold;
@@ -107,7 +99,6 @@ body {
 	border:1px solid #C338AC;	
 }
 #Contact {
-	width:700px;
 	background:#CC3366;
 	padding-top:60px;
 	padding-bottom:60px;
@@ -115,35 +106,25 @@ body {
 #Content {
 	width:430px;
 	margin:0 auto;
-	background:#D87AAF;
+	background:#ffffff;
 	border: 1px solid #000;
-	
-	/*Gradients*/
-	background:-moz-linear-gradient(top, #FFFFFF, #EAADEA, #FF6EC7);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#FF6EC7)), color-stop(0.5, #EAADEA);
 	border-radius:15px;
 	
 	/*Shadows*/
-	box-shadow:1px 1px 4px #000;
-	-moz-box-shadow:1px 1px 4px #000;
-	-webkit-box-shadow:1px 1px 4px #000;	
+	box-shadow:1px 1px 4px #000;	
 }
 #Content img {
 	float:left;
 	border:1px solid #000;
-	background:#EF99F1;
+	background:#ffffff;
 	padding:16px;
 	margin:0.7em;
-	/*Gradients*/
-	
-	background:-moz-linear-gradient(top, #FFFFFF, #EAADEA);
-	background:-webkit-gradient(linear, left top, left bottom, from(#FFFFFF), to(#EAADEA));
-	
+
 	/*Border Radius*/
 	border-radius:15px;	
 }
 #Content h2 {
-	color:#FFF;
+	color:#490088;
 	padding-top:0.8em;
 	padding-bottom:0;
 	padding-left:0.3em;
@@ -151,16 +132,17 @@ body {
 }
 #Content p {
 	font-size:0.9em;
-	color:#FFF;
+	color:#490088;
 	padding:0.7em;
 	line-height:1.4em;
 }
 #Footer {
-	background:#DB7093;
+	background:#8e2347;
 	height:20px;
 	width:700px;
 	border-bottom:1px solid #C729D7;
 	text-align: center;
+	font-size:18px;
 }
 </style>
 </head>
@@ -187,7 +169,7 @@ body {
 				    <li><a href="https://merlin.pl/english-for-business-studies-students-book-mackenzie-ian/6777319/?utm_source=ceneo&utm_medium=price&utm_campaign=ceneo_bid"> English for Business </a></li>
 				    <li><a href="https://www.pearsonelt.com/catalogue/business-english/english-for-tourism.html"> English for Tourism </a></li></ul></div>
 		</div>
-		<div id="Footer"><h5>2017 Agata Zyntek </h5></div>
+		<div id="Footer"><strong>2017 Agata Zyntek </strong></div>
 	</div>
 </div>
 </body>
