--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,8 @@ body {
 	text-decoration:none;
 	margin:7px;
 	border-radius:5px;
-	border:1px solid #C338AC;	
+	border:1px solid #C338AC;
+	padding-left:15px;
 }
 #Contact {
 	background:#CC3366;
