--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@ body {
 		<div id="Line"></div>
 		<div id="Contact">
 			<div id="Content">
-			<p> Please click on the link provided and send me an e-mail. I will reply to your message as soon as I can!
+			<p> Please click on the link provided and send me an e-mail. I will reply to your message as soon as I can!</br>
 				<a href="mailto:xyzmail@gmail.com?subject=English">Send me an email!</a></p></div>
 		</div>
 		<div id="Footer"><strong>2017 Agata Zyntek </strong></div>
