--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <body>
 
-<div id="Wrapper">
-	<div id="Header"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250" width="200" alt="flower"/></div>
-	<div id="Line"></div>
-	<div id="Links">
-		<div id="Nav">
+<div id="wrapper">
+	<div id="header"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250" width="200" alt="flower"/></div>
+	<div id="line"></div>
+	<div id="links">
+		<div id="nav">
 			<ul>
 				<li><a href="index.html" class="current">About</a></li>
 				<li><a href="resume.html">Resume</a></li>
@@ -20,12 +20,12 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div id="About">
-			<div id="Content"><img src="http://sr.photos3.fotosearch.com/bthumb/CSP/CSP748/k7487017.jpg" width="90" height="123" alt="Lady"/>
+		<div id="about">
+			<div id="content"><img src="http://sr.photos3.fotosearch.com/bthumb/CSP/CSP748/k7487017.jpg" width="90" height="123" alt="Lady"/>
 			<h1>A new language school to be opened </h1>
 			<p>Hi!I am Agata. I am an open-minded person with high motivation and enthusiasm to teach students from all over the world. I speak German and English. In the nearest future I would like to start studying Swedish. If you are looking for a well-educated, experienced teacher, do not hesistate and get in contact with me by sending an e-mail.</p></div>
 		</div>
-		<div id="Footer"><strong>2017 Agata Zyntek </strong></div>
+		<div id="footer"><strong>2017 Agata Zyntek </strong></div>
 	</div>
 </div>
 </body>
