--- a/resume.html
+++ b/resume.html
@@ -8,11 +8,11 @@
 
 <body>
 
-<div id="Wrapper">
-	<div id="Header"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250" width="200" alt="flower"/></div>
-	<div id="Line"></div>
-	<div id="Links">
-		<div id="Nav">
+<div id="wrapper">
+	<div id="header"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250" width="200" alt="flower"/></div>
+	<div id="line"></div>
+	<div id="links">
+		<div id="nav">
 			<ul>
 				<li><a href="index.html" class="current">About</a></li>
 				<li><a href="resume.html">Resume</a></li>
@@ -20,13 +20,13 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div id="Resume">
-			<div id="Content">
+		<div id="resume">
+			<div id="content">
 			<h2>Experience and education</h2>
 			<p>I have graduated in teaching German and English. I have also a Bachelor of Engineering degree in Environmental Protection and Management and a Master of Arts degree in Management. For many years I have been teaching children and adults. Currently I am teaching at the weekends only as I work also as a HR Executive in one of the multinational companies.
 			I can prepare you for exams, work abroad or simply be a partner in business negotiations. During my classes you will improve your speaking, listening, reading and writing skills.</p></div>
 		</div>
-		<div id="Footer"><strong>2017 Agata Zyntek </strong></div>
+		<div id="footer"><strong>2017 Agata Zyntek </strong></div>
 	</div>
 </div>
 </body>
