--- a/portfolio.html
+++ b/portfolio.html
@@ -8,11 +8,11 @@
 
 <body>
 
-<div id="Wrapper">
-	<div id="Header"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250" width="200" alt="flower"/></div>
-	<div id="Line"></div>
-	<div id="Links">
-		<div id="Nav">
+<div id="wrapper">
+	<div id="header"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250" width="200" alt="flower"/></div>
+	<div id="line"></div>
+	<div id="links">
+		<div id="nav">
 			<ul>
 				<li><a href="index.html" class="current">About</a></li>
 				<li><a href="resume.html">Resume</a></li>
@@ -20,14 +20,14 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div id="Portfolio">
-			<div id="Content">
+		<div id="portfolio">
+			<div id="content">
 			<h2> Educational materials </h2>
 			<ul><li><a href="http://www.empik.com/english-for-logistics-cd-marion-grussendorf,p1101409930,ksiazka-p"> English for Logistics </a></li>
 				    <li><a href="https://merlin.pl/english-for-business-studies-students-book-mackenzie-ian/6777319/?utm_source=ceneo&utm_medium=price&utm_campaign=ceneo_bid"> English for Business </a></li>
 				    <li><a href="https://www.pearsonelt.com/catalogue/business-english/english-for-tourism.html"> English for Tourism </a></li></ul></div>
 		</div>
-		<div id="Footer"><strong>2017 Agata Zyntek </strong></div>
+		<div id="footer"><strong>2017 Agata Zyntek </strong></div>
 	</div>
 </div>
 </body>
