--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,11 @@
 
 <body>
 
-<div id="Wrapper">
-	<div id="Header"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250" width="200" alt="flower"/></div>
-	<div id="Line"></div>
-	<div id="Links">
-		<div id="Nav">
+<div id="wrapper">
+	<div id="header"><img src="https://s-media-cache-ak0.pinimg.com/236x/2c/e4/e3/2ce4e3afdd17ba63e9f0eff360e8a491.jpg" height="250" width="200" alt="flower"/></div>
+	<div id="line"></div>
+	<div id="links">
+		<div id="nav">
 			<ul>
 				<li><a href="index.html" class="current">About</a></li>
 				<li><a href="resume.html">Resume</a></li>
@@ -20,12 +20,12 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
-		<div id="Contact">
-			<div id="Content">
+		<div id="contact">
+			<div id="content">
 			<p> Please click on the link provided and send me an e-mail. I will reply to your message as soon as I can!<br/>
 				<a href="mailto:xyzmail@gmail.com?subject=English">Send me an email!</a></p></div>
 		</div>
-		<div id="Footer"><strong>2017 Agata Zyntek </strong></div>
+		<div id="footer"><strong>2017 Agata Zyntek </strong></div>
 	</div>
 </div>
 </body>
