--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,9 @@
 	<div id="links">
 		<div id="nav">
 			<ul>
-				<li><a href="index.html" class="current">About</a></li>
+				<li><a href="index.html">About</a></li>
 				<li><a href="resume.html">Resume</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="portfolio.html" class="current">Portfolio</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
