--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,10 @@
 	<div id="links">
 		<div id="nav">
 			<ul>
-				<li><a href="index.html" class="current">About</a></li>
+				<li><a href="index.html">About</a></li>
 				<li><a href="resume.html">Resume</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="contact.html" class="current">Contact</a></li>
 			</ul>
 		</div>
 		<div id="contact">
